# fastapi-clean-template

./: .gitignore  .template.env  Makefile  README.md  install.sh  pyproject.toml  pyrightconfig.json  test_install.sh
nginx/: site.conf
src/: main.py
src/api/v1/: api.py  dependencies.py  error.py
src/api/v1/endpoints/: hello.py
src/core/: celery.py
src/core/config/: base.py  develop.py  production.py  testing.py
src/core/types/user/: user.py
src/endpoints/: hello.py
src/models/: user.py
src/models/types/: __init__.py
src/repository/: users.py
src/templates/: __init__.py
src/templates/email/: email_confirm.txt  password_reset.txt
systemd/: gunicorn.service
